--- a/agi_wmts_hetzner_seeder/build.gradle
+++ b/agi_wmts_hetzner_seeder/build.gradle
@@ -130,7 +130,7 @@ task downloadStaticCaches() {
             session(remotes.seedingServer) {
                 get from: "/tiles/", into: gretlShareMountpoint, filter: { it.name =~ /ch\.so\.agi.hintergrundkarte_sw-([0-9]|10)-2056\.db/ }, fileTransfer: "scp"
                 get from: "/tiles/", into: gretlShareMountpoint, filter: { it.name =~ /ch\.so\.agi.hintergrundkarte_farbig-([0-9]|10)-2056\.db/ }, fileTransfer: "scp"
-                get from: "/tiles/", into: gretlShareMountpoint, filter: { it.name =~ /ch\.so\.agi.hintergrundkarte_ortho-1?[0-9]-2056\.db/ }, fileTransfer: "scp"
+                get from: "/tiles/", into: gretlShareMountpoint, filter: { it.name =~ /ch\.so\.agi.hintergrundkarte_ortho-([0-9]|10|1[1-4])-2056\.db/ }, fileTransfer: "scp"
             }
         }
         println "Files downloaded to: " + gretlShareMountpoint
