--- a/nplso2nplch/build.gradle
+++ b/nplso2nplch/build.gradle
@@ -5,28 +5,31 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferNplso2Nplch', 'transferNplso2Laermempfindlichkeit'
 
 task transferNplso2Nplch(type: SqlExecutor) {
-    database = [targetDbUrl, targetDbUser, targetDbPass] //[sourceDbUrl, sourceDbUser, sourceDbPass]
-    sqlFiles = ['arp_npl_mgdm_geobasisdaten_typ_kt.sql',
-                'arp_npl_mgdm_geobasisdaten_typ.sql',
-                'arp_npl_mgdm_geobasisdaten_grundnutzung_zonenflaeche.sql',
-                'arp_npl_mgdm_geobasisdaten_linienbezogene_festlegung.sql',
-                'arp_npl_mgdm_geobasisdaten_objektbezogene_festlegung.sql',
-                'arp_npl_mgdm_geobasisdaten_ueberlagernde_festlegung.sql',
-                'arp_npl_mgdm_rechtsvorschrften_dokument.sql',
-                'arp_npl_mgdm_rechtsvorschrften_hinweisweiteredokumente.sql',
-                'arp_npl_mgdm_geobasisdaten_typ_dokument.sql',
-                'arp_npl_mgdm_multilingualuri.sql',
-                'arp_npl_mgdm_localiseduri.sql']
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sqlFiles = [
+            'arp_npl_mgdm_geobasisdaten_typ_kt.sql',
+            'arp_npl_mgdm_geobasisdaten_typ.sql',
+            'arp_npl_mgdm_geobasisdaten_grundnutzung_zonenflaeche.sql',
+            'arp_npl_mgdm_geobasisdaten_linienbezogene_festlegung.sql',
+            'arp_npl_mgdm_geobasisdaten_objektbezogene_festlegung.sql',
+            'arp_npl_mgdm_geobasisdaten_ueberlagernde_festlegung.sql',
+            'arp_npl_mgdm_rechtsvorschrften_dokument.sql',
+            'arp_npl_mgdm_rechtsvorschrften_hinweisweiteredokumente.sql',
+            'arp_npl_mgdm_geobasisdaten_typ_dokument.sql',
+            'arp_npl_mgdm_multilingualuri.sql',
+            'arp_npl_mgdm_localiseduri.sql'
+    ]
 }
 
 task transferNplso2Laermempfindlichkeit(type: SqlExecutor){
-        database = [targetDbUrl, targetDbUser, targetDbPass] //[sourceDbUrl, sourceDbUser, sourceDbPass]
-        sqlFiles = [
-                'arp_laermempfindlichkeit_mgdm_geobasisdaten_typ.sql',
-                'arp_laermempfindlichkeit_mgdm_geobasisdaten_laermempfindlichkeit_zonenflaeche.sql',
-                'arp_laermempfindlichkeit_mgdm_rechtsvorschrften_dokument.sql',
-                'arp_laermempfindlichkeit_mgdm_rechtsvorschrften_hinweisweiteredokumente.sql',
-                'arp_laermempfindlichkeit_mgdm_geobasisdaten_typ_dokument.sql',
-                'arp_laermempfindlichkeit_mgdm_multilingualuri.sql',
-                'arp_laermempfindlichkeit_mgdm_localiseduri.sql'];
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sqlFiles = [
+            'arp_laermempfindlichkeit_mgdm_geobasisdaten_typ.sql',
+            'arp_laermempfindlichkeit_mgdm_rechtsvorschrften_dokument.sql',
+            'arp_laermempfindlichkeit_mgdm_geobasisdaten_laermempfindlichkeit_zonenflaeche.sql',
+            'arp_laermempfindlichkeit_mgdm_rechtsvorschrften_hinweisweiteredokumente.sql',
+            'arp_laermempfindlichkeit_mgdm_geobasisdaten_typ_dokument.sql',
+            'arp_laermempfindlichkeit_mgdm_multilingualuri.sql',
+            'arp_laermempfindlichkeit_mgdm_localiseduri.sql'
+    ]
 }
