--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -11,7 +11,7 @@ task transferAfuIsboden(type: Db2Db){
     fetchSize = 100
     batchSize = 100
     transferSets = [
-            new TransferSet('afu_isboden_pub_bodeneinheit_gesamt.sql', 'afu_isboden_pub.bodeneinheit_gesamt', true),
+            new TransferSet('afu_isboden_pub_bodeneinheit.sql', 'afu_isboden_pub.bodeneinheit', true),
             new TransferSet('afu_isboden_pub_bodenprofilstandort.sql', 'afu_isboden_pub.bodenprofilstandort', true),
             new TransferSet('afu_isboden_pub_bodenerosion.sql', 'afu_isboden_pub.bodenerosion', true),
             new TransferSet('afu_isboden_pub_hinweiskarte_bodenverdichtung.sql',
