--- a/arp_nutzungsvereinbarung_pub/build.gradle
+++ b/arp_nutzungsvereinbarung_pub/build.gradle
@@ -3,6 +3,8 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
+description = "GRETL-Job für Datenumbau der Nutzungsvereinbarungsdaten von der sogis-DB in die pub-DB"
+
 defaultTasks 'transferArpNutzungsvereinbarung'
 
 task transferArpNutzungsvereinbarung(type: Db2Db){
