--- a/avt_gesamtverkehrsmodell2015_pub/build.gradle
+++ b/avt_gesamtverkehrsmodell2015_pub/build.gradle
@@ -14,6 +14,8 @@ task transferAvtGesamtverkehrsmodell2015(type: Db2Db){
             new TransferSet('avt_gesamtverkehrsmodell2015_pub_gvm_so_2015_prognose_2025.sql',
                     'avt_gesamtverkehrsmodell2015_pub.gvm_so_2015_prognose_2025', true),
             new TransferSet('avt_gesamtverkehrsmodell2015_pub_gvm_so_2015_prognose_2040.sql',
-                    'avt_gesamtverkehrsmodell2015_pub.gvm_so_2015_prognose_2040', true)
+                    'avt_gesamtverkehrsmodell2015_pub.gvm_so_2015_prognose_2040', true),
+            new TransferSet('avt_gesamtverkehrsmodell2015_pub_gvm_so_2015_oev.sql',
+                    'avt_gesamtverkehrsmodell2015_pub.gesmtvrkl2015_oev_passagiere', true)
     ];
 }
