--- a/agi_hoheitsgrenzen_pub_sogis/build.gradle
+++ b/agi_hoheitsgrenzen_pub_sogis/build.gradle
@@ -1,11 +1,15 @@
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
+apply plugin: 'ch.so.agi.gretl'
+
+description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der sogis-DB"
+
 defaultTasks 'transferAgiHoheitsgrenzen'
 
 task transferAgiHoheitsgrenzen(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = ['jdbc:postgresql://10.36.54.198:54322/sogis','barpastu','agi-stur']//sourceDb
+    targetDb = sourceDb
     transferSets = [
             new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindegrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
