--- a/afu_wasserbewirtschaftung_pub/build.gradle
+++ b/afu_wasserbewirtschaftung_pub/build.gradle
@@ -3,16 +3,16 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfuGrundwasserbewirtschaftung'
+defaultTasks 'transferAfuWasserbewirtschaftung'
 
-task transferAfuGrundwasserbewirtschaftung(type: Db2Db){
+task transferAfuWasserbewirtschaftung(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('afu_wasserbewirtschaftung_fassung_pub.sql', 'wasserbewirtschaftung.wassrbwrtschftung_fassung', true),
-            new TransferSet('afu_wasserbewirtschaftung_grundwassereinbauten_pub.sql', 'wasserbewirtschaftung.wassrbwrtschftung_grundwassereinbau', true),
-            new TransferSet('afu_wasserbewirtschaftung_grundwasserwaermepumpen_entnahmeschacht_pub.sql', 'wasserbewirtschaftung.wassrbwrtschftung_grundwasserwaermepumpen_entnahmeschacht', true),
-            new TransferSet('afu_wasserbewirtschaftung_quellen_pub.sql', 'wasserbewirtschaftung.wassrbwrtschftung_quelle', true),
-            new TransferSet('afu_wasserbewirtschaftung_trinkwasserobjekte_pub.sql', 'wasserbewirtschaftung.wassrbwrtschftung_trinkwasserversorgung', true)
+            new TransferSet('afu_wasserbewirtschaftung_fassung_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_fassung', true),
+            new TransferSet('afu_wasserbewirtschaftung_grundwassereinbauten_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_grundwassereinbau', true),
+            new TransferSet('afu_wasserbewirtschaftung_grundwasserwaermepumpen_entnahmeschacht_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_grundwasserwaermepumpen_entnahmeschacht', true),
+            new TransferSet('afu_wasserbewirtschaftung_quellen_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_quelle', true),
+            new TransferSet('afu_wasserbewirtschaftung_trinkwasserobjekte_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_trinkwasserversorgung', true)
     ];
 }
