--- a/agi_hoheitsgrenzen_pub_sogis/build.gradle
+++ b/agi_hoheitsgrenzen_pub_sogis/build.gradle
@@ -5,10 +5,10 @@ apply plugin: 'ch.so.agi.gretl'
 
 description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der sogis-DB"
 
-defaultTasks 'transferAgiHoheitsgrenzen'
+defaultTasks 'transferAgiHoheitsgrenzen', 'generalizeAgiHoheitsgrenzen'
 
 task transferAgiHoheitsgrenzen(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]//[dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = sourceDb
     transferSets = [
             new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindegrenze.sql',
@@ -16,6 +16,26 @@ task transferAgiHoheitsgrenzen(type: Db2Db){
             new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_bezirksgrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true),
             new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_kantonsgrenze.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true)
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindename_a4.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a4', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindename_a3.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a3', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_bezirksname_a4.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a4', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_kantonsname_a4.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true),
+            new TransferSet('agi_hoheitsgrenzen_pub_hoheitsgrenzen_kantonsname_a3.sql',
+                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a3', true)
     ];        
+}
+
+task generalizeAgiHoheitsgrenzen(type: SqlExecutor) {
+    description = "Baut die Nutzungsplanungsdaten des Kanton Solothurn in das MGDM des Bundes um."
+    database = [dbUriPub, dbUserPub, dbPwdPub]//[dbUriSogis, dbUserSogis, dbPwdSogis]
+    sqlFiles = [
+            'agi_hoheitsgrenzen_pub_hoheitsgrenzen_gemeindegrenze_generalisiert.sql',
+            'agi_hoheitsgrenzen_pub_hoheitsgrenzen_bezirksgrenze_generalisiert.sql',
+            'agi_hoheitsgrenzen_pub_hoheitsgrenzen_kantonsgrenze_generalisiert.sql'
+            ]
 }
